--- a/z_lib_persion/build.gradle
+++ b/z_lib_persion/build.gradle
@@ -1,4 +1,4 @@
-if (isDebug.toBoolean()) {
+if (isModule.toBoolean()) {
     apply plugin: 'com.android.application'
 } else {
     apply plugin: 'com.android.library'
@@ -27,10 +27,14 @@ android {
 
     sourceSets {
         main {
-            if (isDebug.toBoolean()) {
+            if (isModule.toBoolean()) {
                 manifest.srcFile 'src/debug/AndroidManifest.xml'
             } else {
                 manifest.srcFile 'src/main/AndroidManifest.xml'
+                //集成开发模式下排除debug文件夹中的所有Java文件
+//                java {
+//                    exclude 'debug/**'
+//                }
             }
 
         }
