--- a/z_lib_video/build.gradle
+++ b/z_lib_video/build.gradle
@@ -1,4 +1,4 @@
-if (isDebug.toBoolean()) {
+if (isModule.toBoolean()) {
     apply plugin: 'com.android.application'
 } else {
     apply plugin: 'com.android.library'
@@ -28,10 +28,14 @@ android {
     // 分模块，根据是否是debug，使用不同的 Manifest
     sourceSets {
         main {
-            if (isDebug.toBoolean()) {
+            if (isModule.toBoolean()) {
                 manifest.srcFile 'src/debug/AndroidManifest.xml'
             } else {
                 manifest.srcFile 'src/main/AndroidManifest.xml'
+                //集成开发模式下排除debug文件夹中的所有Java文件
+//                java {
+//                    exclude 'debug/**'
+//                }
             }
 
         }
