--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':z_lib_common', ':z_lib_home', ':z_lib_persion', ':z_lib_video'
+include ':app', ':z_lib_common', ':z_lib_home', ':z_lib_persion', ':z_lib_video', ':z_lib_main'
