--- a/z_lib_main/build.gradle
+++ b/z_lib_main/build.gradle
@@ -1,24 +1,50 @@
-apply plugin: 'com.android.application'
+if (isModule.toBoolean()) {
+    apply plugin: 'com.android.application'
+} else {
+    apply plugin: 'com.android.library'
+}
+
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
     defaultConfig {
-        applicationId build_versions.application_id
-
         minSdkVersion rootProject.ext.android.minSdkVersion
         targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode build_versions.version_code
         versionName build_versions.version_name
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    // 分模块，根据是否是debug，使用不同的 Manifest
+    sourceSets {
+        main {
+            if (isModule.toBoolean()) {
+                manifest.srcFile 'src/debug/AndroidManifest.xml'
+            } else {
+                manifest.srcFile 'src/main/AndroidManifest.xml'
+                //集成开发模式下排除debug文件夹中的所有Java文件
+//                java {
+//                    exclude 'debug/**'
+//                }
+            }
+
+        }
+    }
+
+    //避免资源名冲突
+    resourcePrefix "main_"
+
+
 }
 
 dependencies {
@@ -28,30 +54,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:support-vector-drawable:28.0.0'
-    if (!isModule.toBoolean()) {
-        implementation project(':z_lib_video')
-        implementation project(':z_lib_home')
-        implementation project(':z_lib_persion')
-        implementation project(':z_lib_main')
-    }
     implementation project(':z_lib_common')
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
