--- a/z_lib_common/build.gradle
+++ b/z_lib_common/build.gradle
@@ -25,21 +25,20 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
+    //noinspection GradleCompatible
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-
     api 'com.android.support:appcompat-v7:28.0.0'
     api 'com.android.support.constraint:constraint-layout:1.1.3'
 
 //    design
     api 'com.android.support:design:28.0.0'
 
+//arouter
+//    api 'com.alibaba:arouter-api:1.4.0'
 
-
-
-
-
+//other
+    api 'com.orhanobut:logger:1.15'
 
 
 
