--- a/z_lib_main/build.gradle
+++ b/z_lib_main/build.gradle
@@ -32,6 +32,27 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    // 分模块，根据是否是debug，使用不同的 Manifest
+    sourceSets {
+        main {
+            if (isModule.toBoolean()) {
+                manifest.srcFile 'src/main/module/AndroidManifest.xml'
+            } else {
+                manifest.srcFile 'src/main/AndroidManifest.xml'
+                //集成开发模式下排除debug文件夹中的所有Java文件
+//                java {
+//                    exclude 'debug/**'
+//                }
+            }
+
+        }
+    }
+
 
     //避免资源名冲突
     resourcePrefix "main_"
@@ -45,6 +66,7 @@ dependencies {
     //noinspection GradleCompatible
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
 
 //    annotationProcessor 'com.alibaba:arouter-compiler:1.2.1'
     implementation project(':z_lib_common')
