--- a/z_lib_common/build.gradle
+++ b/z_lib_common/build.gradle
@@ -35,11 +35,10 @@ dependencies {
     api 'com.android.support:design:28.0.0'
 
 //arouter
-//    api 'com.alibaba:arouter-api:1.4.0'
+    api 'com.alibaba:arouter-api:1.4.0'
 
 //other
     api 'com.orhanobut:logger:1.15'
-
 
 //分包
     api 'com.android.support:multidex:1.0.3'
