--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,8 @@ dependencies {
     }
     implementation project(':z_lib_common')
 
-
+    //    butterknife 引用
+//    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
 
 }
