--- a/z_lib_main/src/main/module/AndroidManifest.xml
+++ b/z_lib_main/src/main/module/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.z_lib_main">
 
     <application
-        android:name=".debug.MainApplication"
+        android:name="debug.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
