--- a/config.gradle
+++ b/config.gradle
@@ -32,7 +32,7 @@ ext {
             "rxjava"                    : "io.reactivex.rxjava2:rxjava:2.2.6",
             "rxandroid"                 : "io.reactivex.rxjava2:rxandroid:2.1.0",
             //json解析
-            "gson"                      : "com.google.code.gson:gson:2.6.2",
+            "gson"                      : 'com.google.code.gson:gson:2.8.1',
             //network
             "okhttp-logging-interceptor": "com.squareup.okhttp3:logging-interceptor:3.12.1",
             "okhttp"                    : "com.squareup.okhttp3:okhttp:3.12.1",
@@ -40,6 +40,7 @@ ext {
             "retrofit"                  : "com.squareup.retrofit2:retrofit:2.5.0",
             "converter-gson"            : "com.squareup.retrofit2:converter-gson:2.5.0",
             "adapter-rxjava"            : "com.squareup.retrofit2:adapter-rxjava2:2.5.0",
+            "PersistentCookieJar"       : "com.github.franmontiel:PersistentCookieJar:v1.0.1",
             //glide图片加载
             "glide"                     : "com.github.bumptech.glide:glide:4.9.0",
             "glide-compiler"            : "com.github.bumptech.glide:compiler:4.9.0",
