--- a/z_lib_common/build.gradle
+++ b/z_lib_common/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     api rootProject.ext.dependencies.rxjava
     api rootProject.ext.dependencies.rxandroid
 
-//    api rootProject.ext.dependencies.glide
+    api rootProject.ext.dependencies.glide
     implementation files('libs/simple-xml-core.jar')
 }
 
