--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,11 +88,12 @@ dependencies {
     //noinspection GradleCompatible
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation project(':z_lib_common')
     if (!isModule.toBoolean()) {
         implementation project(':z_lib_main')
         implementation project(':z_lib_news')
+        implementation project(':z_lib_girl')
     }
-    implementation project(':z_lib_common')
     //    butterknife 引用
     annotationProcessor rootProject.ext.dependencies["butterknife-compiler"]
 
