--- a/z_lib_girl/build.gradle
+++ b/z_lib_girl/build.gradle
@@ -4,7 +4,6 @@ if (isModule.toBoolean()) {
     apply plugin: 'com.android.library'
 }
 
-
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
@@ -25,11 +24,17 @@ android {
 
     }
 
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
 
     // 分模块，根据是否是debug，使用不同的 Manifest
     sourceSets {
@@ -47,15 +52,6 @@ android {
         }
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-
-
     //代码混淆
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
@@ -66,7 +62,7 @@ android {
     }
 
     //避免资源名冲突
-    resourcePrefix "news_"
+    resourcePrefix "gril_"
 
 }
 
@@ -76,6 +72,7 @@ dependencies {
     //noinspection GradleCompatible
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     annotationProcessor rootProject.ext.dependencies["butterknife-compiler"]
     annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
     implementation project(':z_lib_common')
