--- a/z_lib_girl/src/main/module/AndroidManifest.xml
+++ b/z_lib_girl/src/main/module/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.z_lib_main">
+    package="com.example.z_lib_girl">
 
     <application
-        android:name="debug.MainApplication"
+        android:name="debug.GirlsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,7 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".main.GirlsActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +21,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BottomNavigationActivity"
-            android:label="@string/main_title_activity_fragment_module"/>
+            android:name=".girl.GirlActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
