--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ android {
 
         //打包时间
         resValue "string", "build_time", buildTime()
-
+        //保留中文和英文国际化支持
+        resConfigs "en", "zh"
     }
 
     signingConfigs {
@@ -52,6 +53,8 @@ android {
             shrinkResources true
             //Proguard
             minifyEnabled true
+            // proguard-android.txt 表示 Android 系统为我们提供的默认混淆规则文件
+            // proguard-rules.pro 则是我们想要自定义的混淆规则
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             //签名
