--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
         resValue "string", "build_time", buildTime()
         //保留中文和英文国际化支持
         resConfigs "en", "zh"
+
+        //resValue自定义资源
+        resValue("string", "base_url", build_url.base_purang_shop_release)
     }
 
     signingConfigs {
@@ -60,6 +63,11 @@ android {
             //签名
             signingConfig signingConfigs.release
 
+            //resValue自定义资源
+            resValue("string", "app_token", "${TOKEN}")
+            resValue("bool","rel","true")
+            resValue("integer","num","4")
+
         }
 
         debug {
@@ -71,8 +79,15 @@ android {
             shrinkResources false
             minifyEnabled false
             debuggable true
+
+            //resValue自定义资源
+            resValue("string","app_token","${TOKEN}")
+            resValue("bool","rel","true")
+            resValue("integer","num","4")
         }
     }
+
+
 
     //代码混淆
     packagingOptions {
