--- a/z_lib_common/build.gradle
+++ b/z_lib_common/build.gradle
@@ -16,9 +16,18 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            debuggable false
             // proguard-android.txt 表示 Android 系统为我们提供的默认混淆规则文件
             // proguard-rules.pro 则是我们想要自定义的混淆规则
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            debuggable true
+        }
+
+        debugUat {
+            debuggable true
         }
     }
 
