--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ android {
             // proguard-rules.pro 则是我们想要自定义的混淆规则
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
+            debuggable false
+
             //签名
             signingConfig signingConfigs.release
 
@@ -68,9 +70,11 @@ android {
             resValue("bool","rel","true")
             resValue("integer","num","4")
 
+            resValue "string", "base_url", build_url.base_purang_shop_release
         }
 
         debug {
+            signingConfig signingConfigs.release
             //给applicationId添加后缀“.debug”
             applicationIdSuffix ".debug"
             //manifestPlaceholders = [app_icon: "@drawable/launch_beta"]
@@ -79,6 +83,21 @@ android {
             shrinkResources false
             minifyEnabled false
             debuggable true
+
+            resValue "string", "base_url", build_url.base_purang_shop_debug
+
+            //resValue自定义资源
+            resValue("string","app_token","${TOKEN}")
+            resValue("bool","rel","true")
+            resValue("integer","num","4")
+        }
+
+
+        debugUat {
+            signingConfig signingConfigs.release
+            debuggable true
+            shrinkResources false
+            resValue "string", "base_url", build_url.base_purang_shop_test
 
             //resValue自定义资源
             resValue("string","app_token","${TOKEN}")
