--- a/z_lib_girl/build.gradle
+++ b/z_lib_girl/build.gradle
@@ -27,8 +27,18 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        debug {
+            debuggable true
+        }
+
+        debugUat {
+            debuggable true
+        }
+
     }
 
     compileOptions {
