--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,30 @@ android {
     }
 
 
+    //必须放在buildTypes 后面
+//    productFlavors{
+//        //随便命名，建议根据该维度的具体信息进行命名
+//        wandoujia{
+//
+//        }
+//        xiaomi{
+//
+//        }
+//    }
+//    productFlavors.all { flavor ->
+//        flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
+//    }
+//    applicationVariants.all { variant ->
+//        variant.outputs.each { output ->
+//            def outputFile = output.outputFile
+//            if (outputFile != null && outputFile.name.endsWith('.apk')) {
+//                def fileName = outputFile.name.replace(".apk", "-${defaultConfig.versionName}.apk")
+//                output.outputFile = new File(outputFile.parent, fileName)
+//            }
+//        }
+//    }
+//
+
 
     //代码混淆
     packagingOptions {
