--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: "config.gradle"
-apply from: 'versions.gradle'
 
 buildscript {
+    apply from: 'bank.gradle'
+    apply from: 'versions.gradle'
 
     repositories {
         google()
