--- a/bank.gradle
+++ b/bank.gradle
@@ -1,71 +1,57 @@
 ext {
-    purang = [
-            app_client               : "pr",
-            apk_name                 : "bsd_purang.apk",
-            application_id           : "com.purang.bsd_purang",
-            application_package      : "com.purang.bsd.purang",
-            app_file_provider        : "com.purang.bsd_purang.fileProvider",
-            version_code             : 100,
-            version_name             : "3.3.3",
-            app_name                 : '艳阳天',
-            release                  : "https://yanyangtian.purang.com/",
-            debug                    : "http://10.10.64.108:8010/",//开发模式
-            debugTest                : "https://yytuatbranch.purang.com/",
-            debugUat                 : "https://testyytuat.purang.com/",
-            shop_id                  : "10",
-            getui_app_id_debug       : "HoaFkqACor50mB5SoBpV48",
-            getui_app_key_debug      : "3lH7FA0RRSAX9S9TdScyB1",
-            getui_app_secret_debug   : "n5eHACemWp8vk3lBnx7yt3",
-            getui_app_id_release     : "zuBTDzn03G9tYwCsnxrAx8",
-            getui_app_key_release    : "QZehxRYNKu7Qhu24NMFN22",
-            getui_app_secret_release : "KclI5JhjiY97di1uRjzwm3",
-            umeng_app_key            : "5907dfcf04e2055775000a88",
-            baidu_app_key            : "ytSlpol8GLkbxUWKrPA5yrOEQ7vOEWoV",
-            qq_appid_app_key         : '"1106052137"',
-            app_id_app_key           : '"wx57ee655d45be8d8a"',
-            weixin_app_secret_app_key: '"faf7a17b7ef08adf96d6d19372b0895c"',
-            us_name                  : "上海普兰金融服务有限公司",
-            us_web                   : "https://yanyangtian.purang.com",
-            us_tel_show              : "021-60653998",
-            us_tel                   : "021-60653998",
-            us_custom_tel            : "021-60653998",
-            us_address               : "上海市张东路1388号",
-            about_introduction       : "一个助力农村晋级发展与农村金融繁荣的\n互联网绿色平台\n\n一个集计划、风控、营销、操作、评估\n为一体的流程银行",
+    develop = [
+            app_client         : "pr",
+            apk_name           : "bsd_purang.apk",
+            application_id     : "com.purang.bsd_purang",
+            application_package: "com.purang.bsd.purang",
+            app_file_provider  : "com.purang.bsd_purang.fileProvider",
+            version_code       : 100,
+            version_name       : "3.3.3",
+            app_name           : "组件化APP",
+            release            : "https://yanyangtian.purang.com/",
+            debug              : "http://10.10.64.108:8010/",//开发模式
+            debugTest          : "https://yytuatbranch.purang.com/",
+            debugUat           : "https://testyytuat.purang.com/",
+            shop_id            : "10",
+            app_icon           : "@drawable/icon_develop",
     ]
 
-    purangFun = [
-            app_client               : "pr",
-            apk_name                 : "bsd_purang.apk",
-            application_id           : "com.purang.bsd_purang",
-            application_package      : "com.purang.bsd.purang",
-            app_file_provider        : "com.purang.bsd_purang.fileProvider",
-            version_code             : 100,
-            version_name             : "3.3.3",
-            app_name                 : '艳阳天',
-            release                  : "https://yanyangtian.purang.com/",
-            debug                    : "https://yanyangtian.purang.com/",//生成
-            debugTest                : "https://testpurang.purang.com/",//测试分支
-            debugUat                 : "https://testyytuat.purang.com/",//云测试
-            shop_id                  : "10",
-            getui_app_id_debug       : "HoaFkqACor50mB5SoBpV48",
-            getui_app_key_debug      : "3lH7FA0RRSAX9S9TdScyB1",
-            getui_app_secret_debug   : "n5eHACemWp8vk3lBnx7yt3",
-            getui_app_id_release     : "zuBTDzn03G9tYwCsnxrAx8",
-            getui_app_key_release    : "QZehxRYNKu7Qhu24NMFN22",
-            getui_app_secret_release : "KclI5JhjiY97di1uRjzwm3",
-            umeng_app_key            : "5907dfcf04e2055775000a88",
-            baidu_app_key            : "ytSlpol8GLkbxUWKrPA5yrOEQ7vOEWoV",
-            qq_appid_app_key         : '"1106052137"',
-            app_id_app_key           : '"wx57ee655d45be8d8a"',
-            weixin_app_secret_app_key: '"faf7a17b7ef08adf96d6d19372b0895c"',
-            us_name                  : "上海普兰金融服务有限公司",
-            us_web                   : "https://yanyangtian.purang.com",
-            us_tel_show              : "021-60653998",
-            us_tel                   : "021-60653998",
-            us_custom_tel            : "021-60653998",
-            us_address               : "上海市张东路1388号",
-            about_introduction       : "一个助力农村晋级发展与农村金融繁荣的\n互联网绿色平台\n\n一个集计划、风控、营销、操作、评估\n为一体的流程银行",
+    check = [
+            app_client         : "pr",
+            apk_name           : "bsd_purang.apk",
+            application_id     : "com.purang.bsd_purang",
+            application_package: "com.purang.bsd.purang",
+            app_file_provider  : "com.purang.bsd_purang.fileProvider",
+            version_code       : 100,
+            version_name       : "3.3.3",
+            app_name           : '组件化APP',
+            release            : "https://yanyangtian.purang.com/",
+            debug              : "https://yanyangtian.purang.com/",//生成
+            debugTest          : "https://testpurang.purang.com/",//测试分支
+            debugUat           : "https://testyytuat.purang.com/",//云测试
+            shop_id            : "10",
+            app_icon           : "@drawable/icon_check",
     ]
 
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
