# 1.1.4 调用本地aar文件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -185,7 +185,7 @@ android {
     /**************************************多环境打包设置结束******************************************/
 
     /**
-     *调用本地aar文件
+     *调用本地 和z_lib_girl 的 aar文件
      */
     repositories {
         //mavenLocal()
