--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ android {
             //更改AndroidManifest.xml中预先定义好占位符信息
             //manifestPlaceholders = [app_icon: "@drawable/icon"]
             // 不显示Log
-            buildConfigField "boolean", "LEO_DEBUG", "false"
+            buildConfigField "boolean", "LOG_DEBUG", "false"
             //Zipalign优化
             zipAlignEnabled true
             // 移除无用的resource文件
@@ -114,6 +114,10 @@ android {
 
         debugUat {
             signingConfig signingConfigs.release
+            //给applicationId添加后缀“.debugUat”
+            applicationIdSuffix ".debugUat"
+            // 显示Log
+            buildConfigField "boolean", "LOG_DEBUG", "true"
             debuggable true
             shrinkResources false
             resValue "string", "base_url", build_url.base_purang_shop_test
@@ -131,8 +135,26 @@ android {
         def buildType = variant.buildType.name
         def productFlavor = variant.flavorName
 
-//        resValue "string", "app_client", rootProject.ext[productFlavor]["app_client"]
-//        resValue "string", "mall_base_url", rootProject.ext[productFlavor][buildType]
+        resValue "string", "app_client", rootProject.ext[productFlavor]["app_client"]
+        resValue "string", "mall_base_url", rootProject.ext[productFlavor][buildType]
+        resValue "string", "base_url", rootProject.ext[productFlavor][buildType]
+        buildConfigField "String", "QQ_APPID", rootProject.ext[productFlavor]["qq_appid_app_key"]
+        buildConfigField "String", "APP_ID", rootProject.ext[productFlavor]["app_id_app_key"]
+
+        //配置参数信息 和 productFlavors中的不能同时存在
+        if (buildType.contains("debug")) {
+            variant.mergedFlavor.manifestPlaceholders = [app_name        : rootProject.ext[productFlavor]["app_name"],
+                                                         app_icon        : rootProject.ext[productFlavor]["app_icon"],
+                                                         app_package     : rootProject.ext[productFlavor]["application_package"],
+                                                         "APP_ID"        : rootProject.ext[productFlavor]["app_id_app_key"],
+                                                         GETUI_APP_SECRET: rootProject.ext[productFlavor]["getui_app_secret_debug"]]
+        } else {
+            variant.mergedFlavor.manifestPlaceholders = [app_name        : rootProject.ext[productFlavor]["app_name"],
+                                                         app_icon        : rootProject.ext[productFlavor]["app_icon"],
+                                                         app_package     : rootProject.ext[productFlavor]["application_package"],
+                                                         "APP_ID"        : rootProject.ext[productFlavor]["app_id_app_key"],
+                                                         GETUI_APP_SECRET: rootProject.ext[productFlavor]["getui_app_secret_debug"]]
+        }
 
         variant.outputs.all {
             if (outputFileName.endsWith('.apk')) {
@@ -153,10 +175,12 @@ android {
             applicationId rootProject.ext["develop"]["application_id"]
             versionCode rootProject.ext["develop"]["version_code"]
             versionName rootProject.ext["develop"]["version_name"]
-            manifestPlaceholders = [
-                    app_name: rootProject.ext["develop"]["app_name"],
-                    app_icon: rootProject.ext["develop"]["app_icon"]
-            ]
+//            manifestPlaceholders = [
+//                    app_name   : rootProject.ext["develop"]["app_name"],
+//                    app_icon   : rootProject.ext["develop"]["app_icon"],
+//                    "APP_ID"   : rootProject.ext["develop"]["app_id_app_key"],
+//                    app_package: rootProject.ext["develop"]["application_package"],
+//            ]
         }
         //测试环境
         check {
@@ -166,20 +190,24 @@ android {
             applicationId rootProject.ext["develop"]["application_id"]
             versionCode rootProject.ext["develop"]["version_code"]
             versionName rootProject.ext["develop"]["version_name"]
-            manifestPlaceholders = [
-                    app_name: rootProject.ext["develop"]["app_name"],
-                    app_icon: rootProject.ext["develop"]["app_icon"]
-            ]
+//            manifestPlaceholders = [
+//                    app_name   : rootProject.ext["develop"]["app_name"],
+//                    app_icon   : rootProject.ext["develop"]["app_icon"],
+//                    "APP_ID"   : rootProject.ext["check"]["app_id_app_key"],
+//                    app_package: rootProject.ext["check"]["application_package"],
+//            ]
         }
         //生产环境
         product {
             dimension "versionCode"
             buildConfigField "int", "ENV_TYPE", "3"
             applicationId 'com.example.elementdemo.product'
-            manifestPlaceholders = [
-                    app_name: "ProductDemo",
-                    app_icon: "@drawable/icon_product"
-            ]
+//            manifestPlaceholders = [
+//                    app_name   : "ProductDemo",
+//                    app_icon   : "@drawable/icon_product",
+//                    "APP_ID"   : rootProject.ext["product"]["app_id_app_key"],
+//                    app_package: rootProject.ext["product"]["application_package"],
+//            ]
         }
     }
     /**************************************多环境打包设置结束******************************************/
@@ -211,9 +239,8 @@ android {
 //        release.setRoot('build-types/release')//指定release模式的路径
 //    }
 
-
     /**
-     *调用本地 和z_lib_girl 的 aar文件
+     * 调用本地 和z_lib_girl 的 aar文件
      */
     repositories {
         //mavenLocal()
@@ -242,7 +269,7 @@ android {
         preDexLibraries = false
         additionalParameters += '--multi-dex'
         additionalParameters += '--set-max-idx-number=35000'
-    //每个包内方法数上限（根据实际项目配置这个数，来适配4.0-4.4一些低端机型，因为拆分的dex太大，这些低端机型加载不了dex）
+        //每个包内方法数上限（根据实际项目配置这个数，来适配4.0-4.4一些低端机型，因为拆分的dex太大，这些低端机型加载不了dex）
         additionalParameters += '--minimal-main-dex'
     }
     compileOptions {
@@ -253,7 +280,7 @@ android {
     /**
      * 设置DataBinding状态为可用
      */
-    dataBinding{
+    dataBinding {
         enabled = true
     }
 
