--- a/bank.gradle
+++ b/bank.gradle
@@ -1,38 +1,76 @@
 ext {
     develop = [
-            app_client         : "pr",
-            apk_name           : "bsd_purang.apk",
-            application_id     : "com.purang.bsd_purang",
-            application_package: "com.purang.bsd.purang",
-            app_file_provider  : "com.purang.bsd_purang.fileProvider",
-            version_code       : 100,
-            version_name       : "3.3.3",
-            app_name           : "组件化APP",
-            release            : "https://yanyangtian.purang.com/",
-            debug              : "http://10.10.64.108:8010/",//开发模式
-            debugTest          : "https://yytuatbranch.purang.com/",
-            debugUat           : "https://testyytuat.purang.com/",
-            shop_id            : "10",
-            app_icon           : "@drawable/icon_develop",
+            app_client              : "pr",
+            apk_name                : "bsd_purang.apk",
+            application_id          : "com.purang.bsd_purang",
+            version_code            : 100,
+            version_name            : "3.3.3",
+            app_name                : "组件化APP",
+            release                 : "https://yanyangtian.purang.com/",
+            debug                   : "http://10.10.64.108:8010/",//开发模式
+            debugTest               : "https://yytuatbranch.purang.com/",
+            debugUat                : "https://testyytuat.purang.com/",
+            shop_id                 : "10",
+            app_icon                : "@drawable/icon_develop",
+            qq_appid_app_key        : '"1106052137"',
+
+
+            app_file_provider       : "com.purang.bsd_purang.fileProvider",
+            application_package     : "com.purang.bsd.purang",
+            app_id_app_key          : '"wx57ee655d45be8d8a"',
+            getui_app_id_debug      : "HoaFkqACor50mB5SoBpV48",
+            getui_app_key_debug     : "3lH7FA0RRSAX9S9TdScyB1",
+            getui_app_secret_debug  : "n5eHACemWp8vk3lBnx7yt3",
+
+
     ]
 
     check = [
-            app_client         : "pr",
-            apk_name           : "bsd_purang.apk",
-            application_id     : "com.purang.bsd_purang",
-            application_package: "com.purang.bsd.purang",
-            app_file_provider  : "com.purang.bsd_purang.fileProvider",
-            version_code       : 100,
-            version_name       : "3.3.3",
-            app_name           : '组件化APP',
-            release            : "https://yanyangtian.purang.com/",
-            debug              : "https://yanyangtian.purang.com/",//生成
-            debugTest          : "https://testpurang.purang.com/",//测试分支
-            debugUat           : "https://testyytuat.purang.com/",//云测试
-            shop_id            : "10",
-            app_icon           : "@drawable/icon_check",
+            app_client              : "pr",
+            apk_name                : "bsd_purang.apk",
+            application_id          : "com.purang.bsd_purang",
+            version_code            : 100,
+            version_name            : "3.3.3",
+            app_name                : '组件化APP',
+            release                 : "https://yanyangtian.purang.com/",
+            debug                   : "https://yanyangtian.purang.com/",//生成
+            debugTest               : "https://testpurang.purang.com/",//测试分支
+            debugUat                : "https://testyytuat.purang.com/",//云测试
+            shop_id                 : "10",
+            app_icon                : "@drawable/icon_check",
+            qq_appid_app_key        : '"1106052137"',
+
+
+            application_package     : "com.purang.bsd.purang",
+            app_file_provider       : "com.purang.bsd_purang.fileProvider",
+            app_id_app_key          : '"wx57ee655d45be8d8a"',
+            getui_app_id_debug      : "HoaFkqACor50mB5SoBpV48",
+            getui_app_key_debug     : "3lH7FA0RRSAX9S9TdScyB1",
+            getui_app_secret_debug  : "n5eHACemWp8vk3lBnx7yt3",
     ]
 
+    product = [
+            app_client              : "pr",
+            apk_name                : "bsd_purang.apk",
+            application_id          : "com.purang.bsd_purang",
+            version_code            : 100,
+            version_name            : "3.3.3",
+            app_name                : '组件化APP',
+            release                 : "https://yanyangtian.purang.com/",
+            debug                   : "https://yanyangtian.purang.com/",//生成
+            debugTest               : "https://testpurang.purang.com/",//测试分支
+            debugUat                : "https://testyytuat.purang.com/",//云测试
+            shop_id                 : "10",
+            app_icon                : "@drawable/icon_check",
+            qq_appid_app_key        : '"1106052137"',
+
+            application_package     : "com.purang.bsd.purang",
+            app_file_provider       : "com.purang.bsd_purang.fileProvider",
+            app_id_app_key          : '"wx57ee655d45be8d8a"',
+            getui_app_id_debug      : "HoaFkqACor50mB5SoBpV48",
+            getui_app_key_debug     : "3lH7FA0RRSAX9S9TdScyB1",
+            getui_app_secret_debug  : "n5eHACemWp8vk3lBnx7yt3",
+    ]
 
 }
 
