--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         <meta-data
             android:name="android.max_aspect"
             android:value="2.1" />
+        <!--<meta-data-->
+            <!--android:name="android.max_aspect"-->
+            <!--android:value="2.4" />-->
+
 
         <!--适配华为（huawei）刘海屏-->
         <meta-data
