--- a/config.gradle
+++ b/config.gradle
@@ -44,6 +44,8 @@ ext {
             //glide图片加载
             "glide"                     : "com.github.bumptech.glide:glide:3.7.0",
             "glide-compiler"            : "com.github.bumptech.glide:compiler:4.9.0",
+            "glide-transformations"     : "jp.wasabeef:glide-transformations:2.0.2",
+            "gpuimage-library"          : "jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1",
             //阿里路由
             "arouter"                   : 'com.alibaba:arouter-api:1.4.0',
             "arouter-compiler"          : 'com.alibaba:arouter-compiler:1.2.1',
@@ -57,6 +59,7 @@ ext {
             //recyclerview
             "easyrecyclerview"          : "com.jude:easyrecyclerview:4.4.2",
             "PhotoView"                 : "com.github.chrisbanes:PhotoView:2.0.0",
+
     ]
 
 }
