--- a/z_lib_main/src/main/AndroidManifest.xml
+++ b/z_lib_main/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         <activity
             android:name=".BottomNavigationActivity"
             android:label="@string/main_title_activity_fragment_module"/>
+        <activity android:name=".glide.ViewpagerActivity" />
+        <activity android:name=".glide.SimpleActivity"/>
     </application>
 
 </manifest>
