--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':z_lib_common', ':z_lib_main', ':z_lib_news', ':z_lib_girl'
+include ':app', ':z_lib_common', ':z_lib_main', ':z_lib_news', ':z_lib_girl', ':z_lib_user', ':z_lib_datas', ':z_lib_home'
