# 2.1.0 封装不同的model和底部导航栏

--- a/z_lib_home/src/main/AndroidManifest.xml
+++ b/z_lib_home/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.z_lib_home" >
     <application>
-
+        <activity
+            android:name="com.example.z_lib_home.BottomNavigationActivity"
+            android:label="@string/home_title_activity_fragment_module"/>
+        <activity android:name="com.example.z_lib_home.glide.ViewpagerActivity" />
+        <activity android:name="com.example.z_lib_home.glide.SimpleActivity"/>
     </application>
 </manifest>
